# face

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  docker-compose-build.yml  docker-compose-use.yml  docker-compose.yml  go.mod  go.sum
.github/workflows/: docker.yml
cmd/: main.go
cmd/facecli/: main.go
cmd/faced/: main.go
cmd/test/: main.go
inspireface-service/: CMakeLists.txt
inspireface-service/src/: main.cpp
internal/camera/: README.md  camera.go
internal/camera/hikvision/: client.go
internal/camera/local/: client.go
internal/config/: config.go
internal/data/: datadb.go  init.go
internal/data/pgvector/: action.go
internal/database/: database.go
internal/recognition/: recognition.go
internal/recognition/ins/: client.go  tojson.go
internal/recognition/inspireface/: client.go  tojson.go
internal/record/: record.go
internal/record/pgvector/: action.go  database.go
internal/record/signinrecord/: db.go
internal/service/: face_verify.go  mainAction.go  maincycle.go  record.go  service.go  tools.go
internal/service/example/: emotionloop.go  finishaction.go  maincycle.go  makeaction.go  recognitionloop.go  record.go  statecycle.go
internal/service/lab/: finishaction.go  mainAction.go  maincycle.go  makeaction.go  record.go
internal/web/: handler.go
internal/web/lab/: handler.go
internal/web/simple/: handler.go
internal/web/templates/: action.html  emotion.html  main.html  manager.html
tools/: com.go  face.go  images.go  logger.go
